--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 ---
-<main class="container">
-  <article class="blog-post">
-    <header>
-      <h1>{{ page.title }}</h1>
-      <p class="post-date">Published {{ page.date | date: "%B %d, %Y" }}</p>
+<article class="prose blog-post">
+    <header class="post-header">
+        <h1>{{ page.title }}</h1>
+        <time class="post-date">{{ page.date | date: "%B %-d, %Y" }}</time>
     </header>
     
-    {{ content }}
-    
-  </article>
-</main>
+    <div class="post-content">
+        {{ content }}
+    </div>
+</article>
